Updates for build fix